--- a/courses/app/views/courseform.scala.html
+++ b/courses/app/views/courseform.scala.html
@@ -3,104 +3,115 @@
 @import helper._
 @import helper.twitterBootstrap._
     
-@helper.form(action = routes.SignUp.submit) {
+@helper.form(action = routes.Application.newCourse) {
        <fieldset>
             <legend>Account informations</legend>
-            
             @inputText(
-                signupForm("username"), 
-                '_label -> "Username", 
-                '_help -> "Please choose a valid username.",
-                '_error -> signupForm.globalError
+                courseForm("courseName"),
+                '_label -> "Course name",
+                '_help -> "Please enter the course name"
             )
-            
             @inputText(
-                signupForm("email"), '_label -> "Email",
-                '_help -> "Enter a valid email address."
-            )
-            
-            @inputPassword(
-                signupForm("password"), 
-                '_label -> "Password",
-                '_help -> "A password must be at least 6 characters. "
-            )
-            
-            @inputPassword(
-                signupForm("repeatPassword"), 
-                '_label -> "Repeat password",
-                '_help -> "Please repeat your password again.",
-                '_error -> signupForm.error("password")
-            )
-            
-        </fieldset>
-        
-        <fieldset>
-            
-            <legend>Contact informations</legend>
-            
-            @select(
-                signupForm("profile.country"), 
-                options = options(Countries.list),
-                '_default -> "--- Choose a country ---",
-                '_label -> "Country",
-                '_error -> signupForm("profile.country").error.map(_.withMessage("Please select your country"))
-            )
-            
-            @textarea(
-                signupForm("profile.address"), 
-                '_label -> "Address", 'cols -> 50
+                courseForm("notes"), 
+                '_label -> "Notes", 
+                '_error -> courseForm.globalError
             )
             
             @inputText(
-                signupForm("profile.age"), 
-                '_label -> "Age", 'class -> "mini",
+                courseForm("institution"),
+                '_label -> "Institution"
+            )
+            
+            @inputText(
+                courseForm("place"),
+                '_label -> "Place"
+            )
+            
+            @inputText(
+                courseForm("plannedCoursePeriod"),
+                '_label -> "Planned course period"
+            )
+            
+            @inputText(
+                courseForm("url"),
+                '_label -> "Url"
+            )
+                        
+            @inputText(
+                courseForm("credits"), 
+                '_label -> "Credits", 'class -> "mini",
                 '_showConstraints -> false
             )
-              
-        </fieldset>
-        
-        <fieldset>
+            
+            @inputText(
+                courseForm("accademicYear"), 
+                '_label -> "Accademic year", 'class -> "mini",
+                '_showConstraints -> false
+            )
+            
+            @inputText(
+                courseForm("budgetedCost"), 
+                '_label -> "Budgeted cost", 'class -> "mini",
+                '_showConstraints -> false
+            )
+            
+            @inputText(
+                courseForm("actualCost"), 
+                '_label -> "Actual cost", 'class -> "mini",
+                '_showConstraints -> false
+            )
+                        
+            @select(
+                courseForm("professor.supervisorID"), 
+                options(Supervisor.options),
+                '_default -> "--- Choose the professor ---",
+                '_label -> "Professors",
+                '_error -> courseForm("professor").error.map(_.withMessage("Please select the professor"))
+            )
+
+            @checkbox(
+                courseForm("isInManifesto"), 
+                '_label -> "Is in manifesto",
+                '_showConstraints -> false)
+            )
             
             @checkbox(
-                signupForm("accept"), 
-                '_label -> None, '_text -> "You aggree the Terms and conditions",
-                '_showConstraints -> false
+                courseForm("isByUNITN"), 
+                '_label -> "Is a UNITN course",
+                '_showConstraints -> false)
             )
             
+            @checkbox(
+                courseForm("isPaid"), 
+                '_label -> "Is paid",
+                '_showConstraints -> false)
+            )
+            
+            @checkbox(
+                courseForm("areAllMarksDefined"), 
+                '_label -> "All marks defined",
+                '_showConstraints -> false)
+            )
+            
+            @checkbox(
+                courseForm("isPaymentCompleted"), 
+                '_label -> "Payment completed",
+                '_showConstraints -> false)
+            )
+            
+            @checkbox(
+                courseForm("deleted"), 
+                '_label -> "Is deleted",
+                '_showConstraints -> false)
+            )
+               
         </fieldset>
         
         <div class="actions">
-            <input type="submit" class="btn primary" value="Sign Up">
+            <input type="submit" class="btn primary" value="Submit">
             <a href="@routes.Application.index" class="btn">Cancel</a>
         </div>
         
     }
     
-}
-
-
-<h2>Add a new course</h2>
-    
-    @helper.form(routes.Application.newCourse()) {
-       @helper.inputText(courseForm("notes")) 
-       @helper.inputText(courseForm("institution")) 
-       @helper.inputText(courseForm("place")) 
-       @helper.inputText(courseForm("credits")) 
-       @helper.inputText(courseForm("course_name")) 
-       @helper.inputText(courseForm("accademicYear")) 
-       @helper.inputText(courseForm("is_in_manifesto")) 
-       @helper.inputText(courseForm("is_by_UNITN")) 
-       @helper.inputText(courseForm("is_paid")) 
-       @helper.inputText(courseForm("budgeted_cost")) 
-       @helper.inputText(courseForm("actual_cost")) 
-       @helper.inputText(courseForm("planned_course_period")) 
-       @helper.inputText(courseForm("are_all_marks_defined")) 
-       @helper.inputText(courseForm("url")) 
-       @helper.inputText(courseForm("is_payment_completed"))
-       @helper.inputText(courseForm("budgeted_cost")) 
-       @helper.inputText(courseForm("deleted")) 
-
-       <input type="submit" value="Create">
-        
-    }
-    
+       
