prima modifica login

--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -96,13 +96,13 @@
                                     <div class="control-group">
                                         <label class="control-label" for="Username">Username</label>
                                         <div class="controls">
-                                            <input type="text" class="input-xlarge" id="Username" placeholder="username@@unitn.it">
+                                            <input type="text" class="input-xlarge" id="username" placeholder="username@@unitn.it">
                                         </div>
                                     </div>
                                     <div class="control-group">
                                         <label class="control-label" for="Psw">Password</label>
                                         <div class="controls">
-                                            <input type="password" class="input-xlarge" id="Psw" placeholder="Password">
+                                            <input type="password" class="input-xlarge" id="Psw" placeholder="password">
                                             <p class="help-block">UnitnItc</p>
                                         </div>
                                     </div>
