--- a/courses/app/views/login.scala.html
+++ b/courses/app/views/login.scala.html
@@ -1,6 +1,6 @@
-@(form: Form[Application.Login])
+@(form: Form[Authentication.Login])
 
-@helper.form(routes.Application.authenticate) {
+@helper.form(routes.Authentication.authenticate) {
             
             <h1>Sign in</h1>
             
@@ -17,7 +17,7 @@
             }
             
             <p>
-                <input type="email" name="email" placeholder="Email" value="@form("email").value">
+                <input type="text" name="username" placeholder="Username" value="@form("username").value">
             </p>
             <p>
                 <input type="password" name="password" placeholder="Password">
