--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -96,20 +96,20 @@
                                     <div class="control-group">
                                         <label class="control-label" for="Username">Username</label>
                                         <div class="controls">
-                                            <input type="text" class="input-xlarge" id="username" placeholder="username@@unitn.it">
+                                            <input type="text" class="input-xlarge" name="username" id="username" placeholder="username@@unitn.it">
                                         </div>
                                     </div>
                                     <div class="control-group">
                                         <label class="control-label" for="Psw">Password</label>
                                         <div class="controls">
-                                            <input type="password" class="input-xlarge" id="Psw" placeholder="password">
+                                            <input type="password" class="input-xlarge" name="password" id="password" placeholder="password">
                                             <p class="help-block">UnitnItc</p>
                                         </div>
                                     </div>
                                     <!-- Aggiunti io, bisogna far fare questa azione al pulsante di login e cancella! - fabbo  -->
                                     <div>
                                         <input type="reset" value="cancella">
-                                        <input type="submit" value="Login">
+                                        <input type="submit" value="login">
                                     </div>
                                 </fieldset>
                             </form>
