--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -50,7 +50,7 @@
           <div class="nav-collapse">
             <ul class="nav">
             </ul>
-            <p class="navbar-text pull-right">Loggato come <a href="#">Username Corrente</a></p>
+            <p class="navbar-text pull-right">Loggato come <a href="#">LOGGATO COME ----</a></p>
           </div><!--/.nav-collapse -->
         </div>
       </div>
