--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -1,5 +1,60 @@
-@(user: UserCredentials)
+@(n: Long)(authstate: Html)
 
-@main(user) {
-  ciao
-}
+@main(n = 13L) {
+<!-- Parte Sx -->
+<ul class="nav nav-list">
+              <li class="nav-header"><font size="4" face="Courier">LOGIN</font></li>
+              <li><a data-toggle="modal" href="#windowTitleDialog" ><font size="3" face="Courier">Login Studente</font></a></li>
+              <li><a data-toggle="modal" href="#windowTitleDialog" ><font size="3" face="Courier">Login Advisor</font></a></li>
+              <li><a data-toggle="modal" href="#windowTitleDialog" ><font size="3" face="Courier">Login Amministrazione</font></a></li>
+              <li class="nav-header"><font size="4" face="Courier">ALTRO</font></li>
+              <li><a href="http://ict.unitn.it/announcements"><font size="3" face="Courier">News e Avvisi</font></a></li>
+              <li><a href="http://ict.unitn.it/contacts"><font size="3" face="Courier">Contattaci</font></a></li>
+            </ul>
+            
+                
+ <div class="modal hide fade" id="windowTitleDialog" style="display: none; ">
+				<div class="modal-header">
+					<a href="#" class="close" data-dismiss="modal"><img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" /></a>
+					<h3>Prova login.</h3>
+				</div><!--modal header -->
+					<div class="modal-body">
+                            <form class="form-horizontal" name="formLogin" action="/login" method="POST">
+                                <fieldset>
+                                    <legend>LOGIN</legend>
+                                    <div class="control-group">
+                                        <label class="control-label" for="Username">Username</label>
+                                        <div class="controls">
+                                            <input type="text" class="input-xlarge" name="username" id="username" placeholder="username@@unitn.it">
+                                        </div>
+                                    </div>
+                                    <div class="control-group">
+                                        <label class="control-label" for="Psw">Password</label>
+                                        <div class="controls">
+                                            <input type="password" class="input-xlarge" name="password" id="password" placeholder="password">
+                                            <p class="help-block">UnitnItc</p>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                                <div><input type="reset" value="cancella">
+                                <input type="submit" value="login">
+                                </div>
+                            </form>
+					</div><!--modal body -->
+				<div class="modal-footer">
+				    <!--
+					<a href="/" class="btn" onclick="closeDialog ();">Cancella</a>
+					<a href="#" class="btn btn-primary" onclick="okClicked ();">Login</a> -->
+				</div>
+		</div> <!--modal hide fade-->
+	      
+
+} { <!-- Parte centrale -->
+ 
+ 
+            <h1>Hello, world!</h1>
+            <p> Inserisci qualcosa qui.</p>
+            <p><a class="btn btn-primary btn-large">Prova &raquo;</a></p>
+            
+          
+} { authstate }
