--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(n: Long)(barrasinistra: Html)(partecentrale: Html)(authstate: Html)
+@(barrasinistra: Html)(partecentrale: Html)(authstate: Html)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -27,11 +27,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/home/miga/Scrivania/Itc/Itc - Copia.html">ICT Doctoral School</a>
+          <a class="brand" href="/">ICT Doctoral School</a>
           <div class="nav-collapse">
             <ul class="nav">
             </ul>
-                <p class="navbar-text pull-right">  @authstate</p>
+                <p class="navbar-text pull-right">  @authstate </p>
           </div>
         </div>
       </div>
