--- a/courses/app/views/authIndex.scala.html
+++ b/courses/app/views/authIndex.scala.html
@@ -1,4 +1,4 @@
 @(user: UserCredentials)
 
-@index(13L) { Loggato come: <a href="@routes.Authentication.logout()">@user.userName</a> }
+@index { Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a> }
 
