--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -53,9 +53,7 @@
 } { <!-- Parte centrale -->
  
  
-            <h1>Hello, world!</h1>
-            <p> Inserisci qualcosa qui.</p>
-            <p><a class="btn btn-primary btn-large">Prova &raquo;</a></p>
+            <h1>Aggiungi qualcosa qui</h1>
             
           
 } { @authstate }
