--- a/courses/app/views/students.scala.html
+++ b/courses/app/views/students.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials)
+@(user: UserCredentials, student: Student)
 
 @main { 
 <!---parte sx -->
@@ -63,30 +63,14 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-	    <td>0</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>TwBootstrap</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td Larry</td>
-	    <td>The Bird</td>
-            <td>twitter</td>
-          </tr>
+	  @for(course <- Course.findCourseEnrolled(student.coursesEnrollmentSet)) {
+            <tr>
+	      <td>@course.courseID</td>
+              <td>@course.courseName</td>
+              <td>@course.professor</td>
+              <td></td>
+            </tr>
+          }
         </tbody>
       </table>
     <p align="right"><a data-toggle="modal" href="#windowTitleDialog" class="btn btn-primary btn-large">AggiungiCorsoEsterno</a></p>
