fixed view student

--- a/courses/app/views/students.scala.html
+++ b/courses/app/views/students.scala.html
@@ -57,7 +57,7 @@
         <thead>
           <tr>
             <th>#</th>
-            <th>Corso</th>
+            <th>Nome Corso</th>
             <th>Docente</th>
             <th>...</th>
           </tr>
@@ -94,9 +94,8 @@
         <thead>
           <tr>
             <th>#</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Username</th>
+            <th>Nome Corso</th>
+            <th>Docente</th>
             <th></th>
           </tr>
         </thead>
