--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(authstate: Html)
+@(form: Form[Authentication.Login])(authstate: Html)
 
 @main {
 <!-- Parte Sx -->
@@ -19,28 +19,35 @@
 					<h3>Prova login.</h3>
 				</div><!--modal header -->
 					<div class="modal-body">
-                            <form class="form-horizontal" name="formLogin" action="/login" method="POST">
-                            <!-- <input type="hidden" value="" -->
-                                <fieldset>
-                                    <legend>LOGIN</legend>
-                                    <div class="control-group">
-                                        <label class="control-label" for="Username">Username</label>
-                                        <div class="controls">
-                                            <input type="text" class="input-xlarge" name="username" id="username" placeholder="username@@unitn.it">
-                                        </div>
-                                    </div>
-                                    <div class="control-group">
-                                        <label class="control-label" for="Psw">Password</label>
-                                        <div class="controls">
-                                            <input type="password" class="input-xlarge" name="password" id="password" placeholder="password">
-                                            <p class="help-block">UnitnItc</p>
-                                        </div>
-                                    </div>
-                                </fieldset>
-                                <div><input type="reset" value="cancella">
-                                <input type="submit" value="login">
-                                </div>
-                            </form>
+			    @helper.form(routes.Authentication.authenticate) {
+			        @if(form.hasGlobalErrors) { 
+			            <p class="error">
+			              @form.globalError.message
+			            </p>
+			        }
+                                <form class="form-horizontal" name="formLogin" action="/login" method="POST">
+                                <!-- <input type="hidden" value="" -->
+                                   <fieldset>
+                                       <legend>LOGIN</legend>
+                                       <div class="control-group">
+                                           <label class="control-label" for="Username">Username</label>
+                                           <div class="controls">
+                                               <input type="text" class="input-xlarge" name="username" id="username" placeholder="username@@unitn.it">
+                                           </div>
+                                       </div>
+                                       <div class="control-group">
+                                           <label class="control-label" for="Psw">Password</label>
+                                           <div class="controls">
+                                               <input type="password" class="input-xlarge" name="password" id="password" placeholder="password">   
+                                               <p class="help-block">UnitnItc</p>
+                                           </div>
+                                       </div>
+                                   </fieldset>
+                                   <div><input type="reset" value="cancella">
+                                   <input type="submit" value="login">
+                                   </div>
+                               </form>
+                           }
 					</div><!--modal body -->
 				<div class="modal-footer">
 				    <!--
