autocomparsa del login

--- a/courses/app/views/authIndex.scala.html
+++ b/courses/app/views/authIndex.scala.html
@@ -1,5 +1,11 @@
 @(user: UserCredentials, form: Form[Authentication.Login])
 
-@index(form) {Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>}
+@index(form) {Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>} {
+<script language="JavaScript">
+function havefun() {
+    //do nothing
+}
+</script>
+}
 
  
