--- a/courses/app/views/students.scala.html
+++ b/courses/app/views/students.scala.html
@@ -375,4 +375,10 @@
 
 
 } { Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
+} {
+    <script language="JavaScript">
+    function havefun() {
+        //do nothing
+    }
+    </script>
 }
