--- a/courses/app/views/students_base.scala.html
+++ b/courses/app/views/students_base.scala.html
@@ -374,4 +374,10 @@
 
 
 } { Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
+} {
+    <script language="JavaScript">
+    function havefun() {
+        //do nothing
+    }
+    </script>
 }
