--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -1,7 +1,9 @@
-@(form: Form[Authentication.Login])(authstate: Html)
+@(form: Form[Authentication.Login])(authstate: Html)(script: Html)
 
 @main {
 <!-- Parte Sx -->
+
+
 <ul class="nav nav-list">
               <li class="nav-header"><font size="4" face="Courier">LOGIN</font></li>
               <li><a data-toggle="modal" name="logstudente" href="#windowTitleDialog" ><font size="3" face="Courier">Login Studente</font></a></li>
@@ -24,9 +26,8 @@
 			            <p class="error">
 			              @form.globalError.message
 			            </p>
-			        }
-                                <form class="form-horizontal" name="formLogin" action="/login" method="POST">
-                                <!-- <input type="hidden" value="" -->
+			        } 
+<!--                                <form class="form-horizontal" name="formLogin" action="/login" method="POST">-->
                                    <fieldset>
                                        <legend>LOGIN</legend>
                                        <div class="control-group">
@@ -46,8 +47,8 @@
                                    <div><input type="reset" value="cancella">
                                    <input type="submit" value="login">
                                    </div>
-                               </form>
-                           }
+                              <!-- </form>-->
+                           } 
 					</div><!--modal body -->
 				<div class="modal-footer">
 				    <!--
@@ -63,4 +64,4 @@
             <h1>Aggiungi qualcosa qui</h1>
             
           
-} { @authstate }
+} { @authstate } { @script }
