--- a/courses/app/views/nonAuthIndex.scala.html
+++ b/courses/app/views/nonAuthIndex.scala.html
@@ -1,4 +1,15 @@
 @(form: Form[Authentication.Login])
 
-@index(form) { Ospite}
+@index(form) { Ospite } {
+<script language="JavaScript">
+function mostraLogin() {
+   $('#windowTitleDialog').modal('show')
+}
+function havefun() {
+    @if(form.hasGlobalErrors) { 
+        mostraLogin()
+    }
+}
+</script>
+}
 
